Fixed spacing, added html for contact page

--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,13 @@
 body {
+	margin: 10px 20px;
     font-family: -apple-system, BlinkMacSystemFont, sans-serif;
 }
 
 header {
 	width: 100%;
+	border-bottom: solid;
+	border-bottom-width: 2px;
+	border-bottom-color: black;
 }
 
 header h1 {
@@ -14,6 +18,4 @@ header h1 {
 	width: 50%;
 }
 
-#home-div {
-	background-color: red;
-}
+
